# oss-multi-agent-chatbot

./: AGENTS.md  LICENSE  README.md  docker-compose.yaml
.claude/commands/: run.md
apps/chat-ui/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
apps/chat-ui/app/: globals.css  layout.tsx  page.tsx  runtime.tsx
apps/chat-ui/src/: App.tsx  index.css  main.tsx
apps/chat-ui/test/: dockerization.test.mjs
docs/: HISTORY.md  SYSTEM.md
infrastructure/agentgateway/: config.yaml
infrastructure/agentregistry/: config.env
infrastructure/bastion/: config.env
infrastructure/chat/: config.env
infrastructure/chat-ui/: config.env
infrastructure/clickhouse/: config.xml  users.xml
infrastructure/dex/: config.yaml
infrastructure/langfuse/: config.env
infrastructure/orchestrator/: config.env
infrastructure/postgres/: init.sql
infrastructure/redis/: redis.conf
platform/agents/: pyproject.toml
platform/agents/bastion/: __main__.py  card.py  executor.py  graph.py  pyproject.toml
platform/agents/bastion/skills/: decompose_query.py
platform/agents/bastion/src/bastion/: __init__.py  __main__.py  executor.py  graph.py  server.py
platform/agents/bastion/tests/: test_bastion_stub.py
platform/agents/chat/: Dockerfile  __main__.py  card.py  executor.py  pyproject.toml
platform/agents/orchestrator/: .dockerignore  .gitignore  Dockerfile  __main__.py  agent.py  card.py  config.py  executor.py  graph.py  pyproject.toml
platform/agents/orchestrator/skills/: decompose_query.py
tests/: test_units.py
(+7 files in other folders)
