[project]
name = "bastion"
version = "0.1.0"
description = "Stub A2A agent that returns the received payload."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "a2a-sdk[http-server]==1.1.0",
  "langgraph==1.2.5",
  "uvicorn==0.49.0",
]

[project.scripts]
bastion = "bastion.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
