[project]
name = "Orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "a2a-redis>=0.2.1",
    "a2a-sdk[http-server]>=1.1.0",
    "httpx>=0.28.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "langgraph-api>=0.10.0",
    "uvicorn>=0.49.0",
]
